manifests/podnetwork/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
