manifests/podnetwork/web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: petclinc
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: petclinic
