manifests/podnetwork/web-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: petclinic
spec:
  path: /
  to:
    kind: Service
    name: petclinc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
