manifests/podnetwork/allow-app-to-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-app-to-db
  namespace: app-vm
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: petclinic
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
