manifests/podnetwork/allow-from-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-router-traffic
spec:
  podSelector:
    matchLabels:
      app: petclinic
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ''
  policyTypes:
    - Ingress
